2004-07-09  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/16459
	* pa.c (output_indirect_call): Use %r2 as the link register when
	calling $$dyncall with a pc-relative branch.

2004-07-07  Andreas Schwab  <schwab@suse.de>

	* config/ia64/ia64.md: Define new attribute "empty".
	(prologue_use, nop_x, insn_group_barrier): Set it.

	* config/ia64/ia64.c (ia64_reorg): When looking for trailing call
	skip over "empty" insns.

2004-07-04  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/contrib.texi (Contributors): Adjust link for GNU Classpath.

2004-06-30  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa.c (emit_move_sequence): Fix loading of non 14-bit CONST operands
	when generating PIC code.

2004-06-28  Josef Zlomek  <zlomekj@suse.cz>

	PR c/15549
	Backport from mainline
	2003-08-19  Mark Mitchell  <mark@codesourcery.com>

		PR c++/11946
		* convert.c (convert_to_integer): Use CONVERT_EXPR (instead of
		NOP_EXPR) when necessary.

2004-06-17  Ian Lance Taylor  <ian@wasabisystems.com>

	PR middle-end/16038
	Backport from mainline:
	Fri Apr  4 17:43:52 2003  Olivier Hainque <hainque@act-europe.fr>

	* emit-rtl.c (get_mem_attrs): Adjust alignment tests determining
	use of default attributes to agree MEM_ALIGN macro.

2004-05-31  Release Manager

	* GCC 3.3.4 Released.

2004-05-31  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR target/15693
	* config/sparc/sparc.c (compare_operand): New predicate.
	* config/sparc/sparc.h (PREDICATE_CODES): Add it.
	* config/sparc/sparc.md (cmpsi expander): Use it.  If the first
	operand is a ZERO_EXTRACT and the second operand is not zero,
	force the former to a register.
	(cmpdi expander): Likewise.

2004-05-29  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR optimization/13653
	* loop.c (loop_givs_rescan): When reducing a non-replaceable giv,
	clear the RTX_UNCHANGING_P flag.

2004-05-28  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR bootstrap/14671